@@ -5,14 +5,14 @@ import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import java.io.*;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.time.ZonedDateTime;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.*;
+import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -63,7 +63,8 @@ public class FileService implements DisposableBean {
         Map.entry("dune.file", "dune"),
         Map.entry("Fast.file", "Fastfile"),
         Map.entry("App.file", "Appfile"),
-        Map.entry("Scan.file", "Scanfile")
+        Map.entry("Scan.file", "Scanfile"),
+        Map.entry("gradlew.file", "gradlew")
     );
     // @formatter:on
 
@@ -364,6 +365,10 @@ public class FileService implements DisposableBean {
             }
 
             Files.copy(resource.getInputStream(), copyPath, StandardCopyOption.REPLACE_EXISTING);
+            // make gradlew executable
+            if (targetFilePath.endsWith("gradlew")) {
+                copyPath.toFile().setExecutable(true);
+            }
         }
     }
 
@@ -550,18 +555,20 @@ public class FileService implements DisposableBean {
         log.debug("Replacing {} with {} in directory {}", targetString, replacementString, startPath);
         File directory = new File(startPath);
         if (!directory.exists() || !directory.isDirectory()) {
-            throw new RuntimeException("Files in the directory " + startPath + " should be replaced but it does not exist.");
+            throw new FileNotFoundException("Files in the directory " + startPath + " should be replaced but it does not exist.");
         }
 
         // rename all files in the file tree
-        Files.find(Paths.get(startPath), Integer.MAX_VALUE, (filePath, fileAttr) -> fileAttr.isRegularFile() && filePath.toString().contains(targetString)).forEach(filePath -> {
-            try {
-                Files.move(new File(filePath.toString()).toPath(), new File(filePath.toString().replace(targetString, replacementString)).toPath());
-            }
-            catch (IOException e) {
-                throw new RuntimeException("File " + filePath + " should be replaced but does not exist.");
-            }
-        });
+        try (var files = Files.find(Path.of(startPath), Integer.MAX_VALUE, (filePath, fileAttr) -> fileAttr.isRegularFile() && filePath.toString().contains(targetString))) {
+            files.forEach(filePath -> {
+                try {
+                    Files.move(filePath, Path.of(filePath.toString().replace(targetString, replacementString)));
+                }
+                catch (IOException e) {
+                    throw new RuntimeException("File " + filePath + " should be replaced but does not exist.");
+                }
+            });
+        }
     }
 
     /**
@@ -574,6 +581,20 @@ public class FileService implements DisposableBean {
      * @throws IOException if an issue occurs on file access for the replacement of the variables.
      */
     public void replaceVariablesInFileRecursive(String startPath, Map<String, String> replacements) throws IOException {
+        replaceVariablesInFileRecursive(startPath, replacements, Collections.emptyList());
+    }
+
+    /**
+     * This replaces all occurrences of the target Strings with the replacement Strings in the given file and saves the file
+     * <p>
+     * {@link #replaceVariablesInFile(String, Map) replaceVariablesInFile}
+     *
+     * @param startPath     the path where the start directory is located
+     * @param replacements  the replacements that should be applied
+     * @param filesToIgnore the name of files for which no replacement should be done
+     * @throws IOException if an issue occurs on file access for the replacement of the variables.
+     */
+    public void replaceVariablesInFileRecursive(String startPath, Map<String, String> replacements, List<String> filesToIgnore) throws IOException {
         log.debug("Replacing {} in files in directory {}", replacements, startPath);
         File directory = new File(startPath);
         if (!directory.exists() || !directory.isDirectory()) {
@@ -583,6 +604,8 @@ public class FileService implements DisposableBean {
         // Get all files in directory
         String[] files = directory.list((current, name) -> new File(current, name).isFile());
         if (files != null) {
+            // filter out files that should be ignored
+            files = Arrays.stream(files).filter(Predicate.not(filesToIgnore::contains)).toArray(String[]::new);
             for (String file : files) {
                 replaceVariablesInFile(Paths.get(directory.getAbsolutePath(), file).toString(), replacements);
             }
@@ -596,7 +619,7 @@ public class FileService implements DisposableBean {
                     // ignore files in the '.git' folder
                     continue;
                 }
-                replaceVariablesInFileRecursive(Paths.get(directory.getAbsolutePath(), subDirectory).toString(), replacements);
+                replaceVariablesInFileRecursive(Paths.get(directory.getAbsolutePath(), subDirectory).toString(), replacements, filesToIgnore);
             }
         }
     }
@@ -805,6 +828,7 @@ public class FileService implements DisposableBean {
      * Removes illegal characters for filenames from the string.
      *
      * See: https://stackoverflow.com/questions/15075890/replacing-illegal-character-in-filename/15075907#15075907
+     *
      * @param string the string with the characters
      * @return stripped string
      */
@@ -830,8 +854,8 @@ public class FileService implements DisposableBean {
     /**
      * Write a given string into a file at a given path
      *
-     * @param stringToWrite     The string that will be written into a file
-     * @param path              The path where the file will be written to
+     * @param stringToWrite The string that will be written into a file
+     * @param path          The path where the file will be written to
      * @return Path to the written file
      */
     public Path writeStringToFile(String stringToWrite, Path path) {
@@ -850,9 +874,9 @@ public class FileService implements DisposableBean {
     /**
      * Serialize an object and write into file at a given path
      *
-     * @param object        The object that is serialized and written into a file
-     * @param objectMapper  The objectMapper that is used for serialization
-     * @param path          The path where the file will be written to
+     * @param object       The object that is serialized and written into a file
+     * @param objectMapper The objectMapper that is used for serialization
+     * @param path         The path where the file will be written to
      * @return Path to the written file
      */
     public Path writeObjectToJsonFile(Object object, ObjectMapper objectMapper, Path path) {
@@ -898,6 +922,7 @@ public class FileService implements DisposableBean {
 
     /**
      * Deletes all specified files.
+     *
      * @param filePaths A list of all paths to the files that should be deleted
      */
     public void deleteFiles(List<Path> filePaths) {
